# kTrackerDark

./: .gitignore  CMakeLists.txt  EventReducer.cxx  EventReducer.h  FastTracklet.cxx  FastTracklet.diff  FastTracklet.h  FastTrackletLinkDef.h  GeomSvc.cxx  GeomSvc.h  JobOptsSvc.cxx  JobOptsSvc.h  KalmanFastTracking.cxx  KalmanFastTracking.h  KalmanFilter.cxx  KalmanFilter.h  KalmanFinder.cxx  KalmanFinder.h  KalmanFitter.cxx  KalmanFitter.h  KalmanTrack.cxx  KalmanTrack.h  KalmanUtil.cxx  KalmanUtil.h  MODE_SWITCH.h  Makefile  MySQLSvc.cxx  MySQLSvc.h  README.md  SMillepede.cxx  SMillepede.h  SMillepedeUtil.cxx  SMillepedeUtil.h  SRawEvent.cxx  SRawEvent.h  SRecEvent.cxx  SRecEvent.h  SRecEventLinkDef.h  SeedFinder.cxx  SeedFinder.h  (+34 more)
TrackExtrapolator/: DetectorConstruction.cc  DetectorConstruction.hh  Field.cc  Field.hh  Makefile  Settings.cc  Settings.hh  TabulatedField3D.cc  TabulatedField3D.hh  TrackExtrapolator.cc  TrackExtrapolator.hh  TrkExt.cc  TubeField.cc  TubeField.hh
alignment/: align_mille.txt  alignment_prop.txt  calibration.txt
alignment/run2/: align_mille.txt  alignment_hodo.txt  alignment_prop.txt  calibration.txt  calibration_before_9287.txt
alignment/run3/: align_mille.txt  alignment_hodo.txt  alignment_prop.txt  calibration.txt
alignment/tools/: hodoAlign.cxx  propAlign.cxx  runAlignment.py  updateAlignment.py
alignment_pars/: align_mille.txt  alignment_hodo.txt
analysis_tools/: QAPlots.cxx  convertRTCurve.py  elementDraw.cxx  eventMixer.cxx  eventSelector.cxx  hodoAlign.cxx  hodoTracking.cxx  inTimeDumper.cxx  makeRTProfile.cxx  propAlign.cxx  propTracking.cxx  readRoads.cxx  sample.cxx  signalFit.cxx  sqlDataReader.cxx  sqlMCReader.cxx  sqlResWriter.cxx  trackMixer.cxx  triggerAna.cxx  triggerAna_online.cxx  update.cxx
exe/: darkEff.cxx  kFastTracking.cxx  kVertex.cxx  nimSkim.cxx  roadCheck.cxx  tupleConv.cxx  tupleConv2.cxx
exe/others/: milleAlign.cxx
grid/: GridUtil.py  mcMerger.py  monitor.py  qdel.py  runAlignment.py  submitAll.py  tracking.conf  trackingMonitor.py  vertex.conf  vertexingMonitor.py
inc/: EventReducer.h  FastTracklet.h  GeomSvc.h  GlobalConsts.h  JobOptsSvc.h  KalmanFastTracking.h  KalmanFilter.h  KalmanFitter.h  MODE_SWITCH.h  SMillepede.h  SRawEvent.h  SRecEvent.h  TrackExtrapolator.hh  VertexFit.h
kTrackerServices/: JobOptsSvc.cxx  JobOptsSvc.h  Makefile
opts/: default.opts
scripts/: RunKTracker.py  compile
scripts/grid/: GridUtil.py  monitor.py  submitAll.py
src/: DetectorConstruction.cc  EventReducer.cxx  FastTracklet.cxx  Field.cc  GeomSvc.cxx  JobOptsSvc.cxx  KalmanFastTracking.cxx  KalmanTrack.cxx  MySQLSvc.cxx  SMillepede.cxx  SRecEvent.cxx  Settings.cc  TabulatedField3D.cc  VertexFit.cxx
test/: Makefile  TestJobOpts.cxx
